13. NCZLd_channel: added functions for displaying/plotting matrixes on scale and orientation, per channel
14. NCZLd_channel: erased duplicated redefinition of struct.wave.fin_scale, now in NCZLd
15. executa: added saliency procedure on saliency_naila. executa executes saliency for SWAM and NCZLd

------v3 version 3

1. model_utils/tmatrix_to_matrix: functions for meanizing portions of matrix on time
2. load_store/display_functions: functions for displaying matrixes on scale, orientation...
3. load_store/store_functions: functions for storing and matrixes on scale, orientation...
4. erased whitening function (tmp-128)*0.75+128 ...
5. added functionality for using color opponents
6. fixed outputfromcsf function, it was using fin_scale as argument to put the residual, now using n_scales

------v4 version 4


1. added metrics file in libs
2. fixed error on using uniform image (ex. image that has no red or green, has zeros, so that do no process but not crash)
3. metrics with reading file lists, outputting scores, means of scores and stds for each method
4. removed libs "CiWAM", "SWAM_for_distro", these are now outside this framework

------v5 version 5

1. implemented for output as specified extension (mat, jpg, png...)
2. storing mats for each channel
3. general storing procedure for Rmodelinduction and channel_ON_OFF files
4. implemented recall and file utils (RF to img_out, img_out to smap), which allows to read mats and do reconstruction of images, then converting to smaps


------v6 version 6

1. cluster scripts done
2. added "display_plot.store_irrelevant" (it allows to store only relevant parameters, as iFactor, eCSF, residual, struct...)

------v7 version 7

1. resized input images is available (autoresize function)
2. store mats correctly (only iFactor, struct, residual (c) and Ls)
3. compute neurodynamic only if the output does not exist, computer only recall if mats exist



