@@ -1,5 +1,5 @@
 
-function [s_map] = channelcombine(channels)
+function [s_map] = channelsqmean(channels)
 
 [m n p] = size(channels);
 s_map = sqrt(sum(channels.^2,3))*(m*n);
